# dots-explorer

./: .gitignore  AUTHOR  CMakeLists.txt  README.md
src/: main.cpp  model.dots
src/backends/: Backend.h  GlfwBackend.h  GlfwOpenGl3Backend.cpp  GlfwOpenGl3Backend.h  GlfwVulkanBackend.cpp  Win32DX11Backend.cpp
src/common/: Colors.h  FilterMatcher.cpp  FilterMatcher.h  ImGuiExt.cpp  ImGuiExt.h  Regex.cpp  Regex.h  Settings.cpp  Settings.dots  Settings.h  System.h  Version.cpp  Version.dots  Version.h
src/components/: HostPanel.cpp  HostPanel.h  MainWindow.cpp  MainWindow.h
src/dots_ext/: FileInChannel.cpp  FileInChannel.h  FileOutChannel.cpp  FileOutChannel.h  TypeRandomizer.h  dots_record.dots  struct_ops.cpp  struct_ops.h
src/models/: EventModel.cpp  EventModel.h  MetadataModel.cpp  MetadataModel.h  PropertyDescriptorModel.cpp  PropertyDescriptorModel.h  PropertyModel.cpp  PropertyModel.h  PublisherModel.cpp  PublisherModel.h  StructDescriptorModel.cpp  StructDescriptorModel.h  StructModel.cpp  StructModel.h  StructRefModel.cpp  StructRefModel.h  TransceiverModel.cpp  TransceiverModel.h
src/tools/: FileInChannel.cpp  TypeRandomizer.h
src/widgets/: CacheView.cpp  CacheView.h  ContainerView.cpp  ContainerView.h  FilterSettingsEdit.cpp  FilterSettingsEdit.h  HelpDialog.cpp  HelpDialog.h  HostSettingsEdit.cpp  HostSettingsEdit.h  InstanceEdit.cpp  InstanceEdit.h  InstanceView.cpp  InstanceView.h  MainWindow.cpp  MainWindow.h  PoolView.cpp  PoolView.h  PropertyDescription.cpp  PropertyDescription.h  PropertyEdit.cpp  PropertyEdit.h  PropertyView.cpp  PropertyView.h  StructDescription.cpp  StructDescription.h  StructEdit.cpp  StructEdit.h  StructItem.cpp  StructItem.h  StructList.cpp  StructList.h  StructListColumn.cpp  StructListColumn.h  StructListRow.cpp  StructListRow.h  StructView.cpp  TraceItem.cpp  TraceView.cpp  TraceView.h  (+2 more)
src/widgets/dialogs/: FileDialog.cpp  FileDialog.h  FilterSettingsEdit.cpp  FilterSettingsEdit.h  HelpDialog.cpp  HelpDialog.h  HostSettingsEdit.cpp  HostSettingsEdit.h  PropertyEdit.cpp  PropertyEdit.h  PublishDialog.cpp  PublishDialog.h  StructEdit.cpp  StructEdit.h
src/widgets/input/: FilterExpressionEdit.cpp  FilterExpressionEdit.h  HostEndpointEdit.cpp  HostEndpointEdit.h  RegexEdit.cpp  RegexEdit.h
src/widgets/views/: CacheView.cpp  CacheView.h  EventView.cpp  EventView.h  HostPanel.cpp  HostPanel.h  HostView.cpp  HostView.h  StructItem.cpp  StructItem.h  StructList.cpp  StructList.h  StructView.cpp  StructView.h  TraceItem.cpp  TraceItem.h  TraceView.cpp  TraceView.h
